[package]
name = "fuel-types"
version = "0.1.0"
authors = ["Victor Lopez <victor.lopez@fuel.sh>"]
edition = "2021"
repository = "https://github.com/FuelLabs/fuel-types"
description = "Fuel data types."

[dependencies]
rand = { version = "0.8", optional = true }
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }
scale-codec = { package = "parity-scale-codec", version = "2.0.0", optional = true }
scale-info = { version = "1.0.0", features = ["derive"], optional = true }

[features]
default = ["std"]
std = []
random = ["rand", "std"]
serde-types = ["serde-types-minimal", "serde/default", "std"]
serde-types-minimal = ["serde"]
scale = ["scale-codec", "scale-info"]